# vibesum

./: pyproject.toml
src/vibesum/: __init__.py  ai.py
tests/: test_vibesum.py
