[project]
name = "vibesum"
version = "0.1.0"
description = "Addition library that uses GPT to add two numbers"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.95.1",
    "pydantic>=2.11.7",
    "typing-extensions>=4.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]